# Yolo3D-ROS

./: README.md
gazebo_simulation/: CMakeLists.txt
gazebo_simulation/launch/: simulation.launch.py
gazebo_simulation/models/rs_robot/: rs_robot.sdf
gazebo_simulation/worlds/: yolo3D_test_world.model
omni_control/: CMakeLists.txt
yolo3d/: CMakeLists.txt  package.xml
yolo3d/scripts/: inference_ros.py
